syntax = "proto3";

option csharp_namespace = "AuthorizationManagement.AuthorizationService.Protos";

package AuthorizationManagement;

service RoleManagement
{
	rpc GetRole (GetRoleRequest) returns (GetRoleResponse);
	rpc CreateRole (CreateRoleRequest) returns (CreateRoleResponse); 
}

message GetRoleRequest 
{
	int32 roleId = 1;
}

message GetRoleResponse
{
	int32 roleId = 1;
	string roleName = 2;
}

message CreateRoleRequest 
{
	int32 roleId = 1;
	string roleName = 2;
}

message CreateRoleResponse
{
	string status = 1;
}