syntax = "proto3";

option csharp_namespace = "GrpcClient";

package RoleAuthorization;

service RoleAuthorization
{
	rpc AuthorizeRoles (AuthorizeRolesRequest) returns (AuthorizeRolesResponse); 
}

message AuthorizeRolesRequest 
{
	repeated int32 roleIds = 1 [packed = true];
}

message AuthorizeRolesResponse
{
	string authorizationStatus = 1;
}